--- a/Front/package.json
+++ b/Front/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "4.6",
     "formik": "^2.2.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
