--- a/Front/package.json
+++ b/Front/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/xlsx": "^0.0.36",
     "axios": "^0.21.1",
     "bootstrap": "4.6",
     "formik": "^2.2.6",
@@ -24,6 +25,7 @@
     "sweetalert2": "10.16",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.9"
   },
   "scripts": {
