--- a/Front/package.json
+++ b/Front/package.json
@@ -13,6 +13,7 @@
     "@types/xlsx": "^0.0.36",
     "axios": "^0.21.1",
     "bootstrap": "4.6",
+    "bootstrap-icons": "^1.10.2",
     "formik": "^2.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
