--- a/Front/package.json
+++ b/Front/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
-    "@types/xlsx": "^0.0.36",
     "axios": "^0.21.1",
     "bootstrap": "4.6",
     "bootstrap-icons": "^1.10.2",
@@ -54,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/xlsx": "^0.0.36"
   }
 }
