--- a/Front/package.json
+++ b/Front/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "5.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.5.6",
+    "reactjs-popup": "^2.0.5",
     "sweetalert2": "10.16",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
