--- a/Front/package.json
+++ b/Front/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "antd": "^5.0.1",
+    "apexcharts": "^3.36.3",
     "axios": "^0.21.1",
     "bootstrap": "4.6",
     "bootstrap-icons": "^1.10.2",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
