--- a/Back/SistemaApi/appsettings.json
+++ b/Back/SistemaApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "frontend_url": "http://localhost:3000",
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=7a03f438-c94f-421d-bc06-5ce4c147c178;IngestionEndpoint=https://centralus-2.in.applicationinsights.azure.com/;LiveEndpoint=https://centralus.livediagnostics.monitor.azure.com/"
+  }
 }
