--- a/Front/package.json
+++ b/Front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,7 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
-    "antd": "^5.0.1",
+    "antd": "^5.1.4",
     "apexcharts": "^3.36.3",
     "axios": "^0.21.1",
     "bootstrap": "4.6",
