--- a/Front/package.json
+++ b/Front/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "4.6",
     "bootstrap-icons": "^1.10.2",
     "formik": "^2.2.6",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
