--- a/Front/package.json
+++ b/Front/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.21.1",
     "bootstrap": "4.6",
     "bootstrap-icons": "^1.10.2",
-    "formik": "^2.2.6",
+    "formik": "^2.4.1",
+    "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
